[gd_scene load_steps=4 format=2]

[ext_resource path="res://filesystem/background/BG-4.png" type="Texture" id=1]
[ext_resource path="res://GodotScript/Tile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Tile" type="Area2D" groups=["Tiles"]]
gravity = 0.0
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.145, 0.145 )
texture = ExtResource( 1 )

[node name="Highlight" type="ColorRect" parent="."]
visible = false
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.972549, 0.0745098, 0.305882, 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
